[package]
name = "commons"
version = "0.3.2"
edition = "2021"
description = "Common libraries for DLMM"
authors = ["tian <tian@racoons.dev>"]

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { workspace = true }
anchor-client = { workspace = true, features = ["async"] }
anchor-spl = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full", "parking_lot"] }
bincode = { workspace = true }
solana-sdk = { workspace = true }
# solana-rpc-client 4.0.0-beta.7 pins solana-account 3.4.0, so we follow it here.
solana-account = "3"
solana-client = "4.0.0-beta.7"
ruint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
async-trait = { workspace = true }
spl-transfer-hook-interface = { workspace = true }

[dev-dependencies]
spl-associated-token-account = { workspace = true }
solana-program-test = "4"
assert_matches = "1.5.0"
solana-program = "4"
spl-memo = { workspace = true, features = ["no-entrypoint"] }
litesvm = "0.6.0"
serde_json = { workspace = true }
